# rdp-database

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  _config.yml  alembic.ini  environment-dev.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: .env  Dockerfile
docs/: db-roles.drawio
e3_ems/: env.py
e3_ems/versions/: 3a7a5c75ae76_add_metadata_to_data_points.py  49bc8370e2fd_initial_db_setup.py  570f0d049840_add_monitoring_views_and_users.py  62ffa7f9c9a4_storage_improvements.py  aa0daa782efc_introduce_access_policies.py  b12e079058dd_add_forcast_horizon_function.py  b158d45bc708_add_initial_metadata_on_data_point_.py
rdp_db/: env.py
rdp_db/core/: 62ffa7f9c9a4_storage_improvements.py  b158d45bc708_add_initial_metadata_on_data_point_.py  rev_2022_06_28_14_53_49bc8370e2fd_initial_db_setup.py  rev_2022_08_04_14_46_d2baa52b21c2_automatic_data_point_resolution.py  rev_2022_08_08_15_01_570f0d049840_add_monitoring_views_and_users.py  rev_2022_10_18_14_23_b12e079058dd_add_forcast_horizon_function.py  rev_2022_10_20_09_54_aa0daa782efc_introduce_access_policies.py  rev_2022_12_07_10_35_62ffa7f9c9a4_storage_improvements.py  rev_2023_10_24_13_20_3a7a5c75ae76_add_metadata_to_data_points.py  rev_2024_02_01_09_25_b158d45bc708_add_initial_metadata_on_data_point_.py  (+2 more)
rdp_db/utils/: db_version.py
tests/: conftest.py  db_helpers.py  test_basic_time_series.py  test_data_point.py  test_data_points.py  test_data_views.py  test_db.py  test_detailed_data_views.py  test_legacy_data_views.py  test_raw_data_tables.py  test_raw_time_series.py
(+4 files in other folders)
